deploy/kubectl/live-1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: golang-wiki
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: "golang-wiki-cloud-platform-reference-app-blue"
    external-dns.alpha.kubernetes.io/aws-weight: "50"
  namespace: cloud-platform-reference-app
spec:
  tls:
  - hosts:
    - cp-reference-app.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: cp-reference-app.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: golang-wiki
          servicePort: 8082
